--- a/.github/workflows/sync-master-to-next.yml
+++ b/.github/workflows/sync-master-to-next.yml
@@ -1,110 +1,139 @@
-# .github/workflows/sync-master-to-next.yml
 name: 🔄 Sync PRs from master to next
 
 on:
   push:
-    branches: [master, main]
+    branches:
+      - master
+      - main
 
 permissions:
   contents: write
   pull-requests: write
 
 env:
+  BASE_BRANCH: main
   TARGET_BRANCH: next
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  sync_push:
+  sync:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-tags: true
 
-      - name: Configure Git
+      - name: Set up Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Get last commit
-        id: commit_info
+      - name: Create or reset sync branch from target
         run: |
-          LAST_COMMIT="${{ github.sha }}"
-          LAST_MESSAGE=$(git log -1 --pretty=%B $LAST_COMMIT)
-          echo "Last commit: $LAST_COMMIT"
-          echo "Message: $LAST_MESSAGE"
+          # Create dynamic sync branch name
+          SYNC_BRANCH="sync-to-${{ env.TARGET_BRANCH }}-${{ github.run_id }}"
+          echo "SYNC_BRANCH=$SYNC_BRANCH" >> $GITHUB_ENV
+          
+          git fetch origin $TARGET_BRANCH
+          git checkout $TARGET_BRANCH
+          git checkout -B "$SYNC_BRANCH"
 
-          # Skip if last commit is a Jenkins release commit
-          if [[ "$LAST_MESSAGE" =~ ^"\[WSO2 Release\]" ]]; then
-            echo "Last commit is a Jenkins release commit. Skipping sync action."
+      - name: Fetch last merged PR into ${{ env.BASE_BRANCH }}
+        id: last_pr
+        run: |
+          LAST_PR=$(gh pr list \
+            --base ${{ env.BASE_BRANCH }} \
+            --state merged \
+            --limit 1 \
+            --json number,mergedAt \
+            -q '.[0].number')
+
+          if [ -z "$LAST_PR" ]; then
+            echo "No merged PRs found in ${{ env.BASE_BRANCH }}. Exiting."
             exit 0
           fi
 
-          echo "LAST_COMMIT=$LAST_COMMIT" >> $GITHUB_ENV
+          echo "LAST_PR=$LAST_PR" >> $GITHUB_ENV
+          echo "Last merged PR into ${{ env.BASE_BRANCH }}: #$LAST_PR"
 
-      - name: Get commits since last push to target branch (excluding Jenkins)
-        id: commits_list
+      - name: Get commits from last PR
+        id: commits
         run: |
-          TARGET_BRANCH=${{ env.TARGET_BRANCH }}
-          BASE_BRANCH="${{ github.ref_name }}"
+          COMMITS=$(gh pr view $LAST_PR --json commits -q '.commits[].oid')
+          if [ -z "$COMMITS" ]; then
+            echo "No commits found in PR #$LAST_PR. Exiting."
+            exit 0
+          fi
+          echo "COMMITS=$COMMITS" >> $GITHUB_ENV
+          echo "Commits to consider: $COMMITS"
 
-          # Fetch target branch
-          git fetch origin $TARGET_BRANCH
-
-          # Get all commits from master/main since target branch
-          COMMITS=$(git log "origin/$TARGET_BRANCH..$BASE_BRANCH" --no-merges --pretty=format:"%H")
-
-          FILTERED_COMMITS=""
+      - name: Cherry-pick commits (skip [skip ci], workflow files, pom.xml only)
+        run: |
           for commit in $COMMITS; do
             MESSAGE=$(git log -1 --pretty=%B $commit)
-            if [[ "$MESSAGE" =~ ^"\[WSO2 Release\]" ]]; then
-              echo "Skipping Jenkins commit $commit: $MESSAGE"
+            FILES_CHANGED=$(git diff-tree --no-commit-id --name-only -r $commit)
+
+            if [[ "$MESSAGE" =~ \[skip\ ci\] ]]; then
+              echo "Skipping $commit because of [skip ci]"
               continue
             fi
-            FILTERED_COMMITS="$FILTERED_COMMITS $commit"
+
+            if echo "$FILES_CHANGED" | grep -q "^.github/workflows/"; then
+              echo "Skipping $commit because it modifies a workflow"
+              continue
+            fi
+
+            if ! echo "$FILES_CHANGED" | grep -v -E "pom\.xml" | grep -q '.'; then
+              echo "Skipping $commit because it only modifies pom.xml files"
+              continue
+            fi
+
+            git cherry-pick $commit || git cherry-pick --skip
           done
 
-          if [ -z "$FILTERED_COMMITS" ]; then
-            echo "No commits to sync after filtering. Exiting..."
-            exit 0
-          fi
+      - name: Push sync branch (force update)
+        run: git push origin HEAD:"$SYNC_BRANCH" --force
 
-          echo "PR_COMMITS=$FILTERED_COMMITS" >> $GITHUB_ENV
+      - name: Fetch target branch
+        run: git fetch origin $TARGET_BRANCH:$TARGET_BRANCH || true
 
-      - name: Create sync branch and cherry-pick commits
+      - name: Create or update pull request
         run: |
-          SYNC_BRANCH="sync-${{ github.run_id }}-to-${{ env.TARGET_BRANCH }}"
+          COMMITS_ON_BRANCH=$(git log ${{ env.TARGET_BRANCH }}..HEAD --oneline || true)
+          if [ -z "$COMMITS_ON_BRANCH" ]; then
+            echo "No commits to sync. Skipping PR creation."
+          else
+            # Get the last merged PR number and title on BASE_BRANCH
+            LAST_PR=$(gh pr list --base ${{ env.BASE_BRANCH }} --state merged --limit 1 --json number -q '.[0].number')
+            PR_TITLE=$(gh pr view $LAST_PR --json title -q '.title')
+            PR_AUTHOR=$(gh pr view $LAST_PR --json author -q '.author.login')
 
-          git checkout -b "$SYNC_BRANCH" "origin/${{ env.TARGET_BRANCH }}"
-
-          CONFLICTS=false
-          ANY_APPLIED=false
-          for commit in $PR_COMMITS; do
-            echo "Cherry-picking commit $commit..."
-            if ! git cherry-pick "$commit"; then
-              echo "::warning::Conflict detected on commit $commit"
-              CONFLICTS=true
-            else
-              ANY_APPLIED=true
-            fi
-          done
-
-          # Push the sync branch regardless of conflicts
-          git push origin "$SYNC_BRANCH" --force
-
-          # Build PR body safely
-          PR_BODY="🤖 **Auto-sync from $BASE_BRANCH**"$'\n'"This PR automatically syncs changes from \`$BASE_BRANCH\` to \`${{ env.TARGET_BRANCH }}\`."
+            # Prepare PR body
+            PR_BODY="🤖 **Auto-sync from ${{ env.BASE_BRANCH }}**
           
-          if [ "$CONFLICTS" = true ]; then
-            if [ "$ANY_APPLIED" = false ]; then
-              PR_BODY="$PR_BODY"$'\n\n'"⚠️ **All commits conflicted. Manual merge required.**"
+          This PR automatically syncs the changes from #${LAST_PR} to the \`${{ env.TARGET_BRANCH }}\` branch.
+          
+          **Original PR:** https://github.com/${{ github.repository }}/pull/${LAST_PR}
+          **Author:** @${PR_AUTHOR}
+          **Workflow run:** ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+
+            # Check for existing open PR
+            EXISTING_PR=$(gh pr list \
+              --base "${{ env.TARGET_BRANCH }}" \
+              --head "$SYNC_BRANCH" \
+              --state open \
+              --json number \
+              -q '.[0].number')
+
+            if [ -n "$EXISTING_PR" ]; then
+              echo "PR #$EXISTING_PR already exists. Updating branch."
             else
-              PR_BODY="$PR_BODY"$'\n\n'"⚠️ **Some commits had conflicts. Manual resolution required for these changes.**"
+              gh pr create \
+                --base "${{ env.TARGET_BRANCH }}" \
+                --head "$SYNC_BRANCH" \
+                --title "[Sync][${{ env.BASE_BRANCH }} -> ${{ env.TARGET_BRANCH }}][#${LAST_PR}]: $PR_TITLE" \
+                --body "$PR_BODY"
             fi
           fi
-
-          # Create PR
-          gh pr create --base "${{ env.TARGET_BRANCH }}" --head "$SYNC_BRANCH" --title "[Sync][$BASE_BRANCH -> ${{ env.TARGET_BRANCH }}] Auto-sync" --body "$PR_BODY"
